--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "px-chart",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "main": [
     "px-chart.html"
   ],
@@ -20,7 +20,9 @@
     "polymer": "~v1.2.3",
     "px-rangepicker": "https://github.com/PredixDev/px-rangepicker.git#~v0.1.2",
     "px-theme": "https://github.com/PredixDev/px-theme.git#~v0.4.0",
-    "d3": "~3.5.6"
+    "d3": "~3.5.6",
+    "px-chart": "https://github.com/PredixDev/px-chart.git#~v1.4.0"
+
   },
   "devDependencies": {
     "iron-ajax": "PolymerElements/iron-ajax#~v1.1.1",
